# add_subdirectory("dynamics_systems")
add_subdirectory("element_sets_and_conversions")
# add_subdirectory("platforms")
# add_subdirectory("propagation")
add_subdirectory("state_representations")
# add_subdirectory("strongly_typed_frames")
# add_subdirectory("strongly_typed_units")
add_subdirectory("time_systems")